# weatherai_backend

./: .dockerignore  .gitignore  .vercelignore  agent.ipynb  agents.py  dockerfile  main.py  netlify.toml  pyproject.toml  requirements.txt  vercel.json
app/: main.py
netlify/functions/: main.py
