[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["khizar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
google-generativeai = "0.7.1"
langchain-google-genai = "^2.0.0"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.30.6"
bs4 = "^0.0.2"
mangum = "^0.19.0"
faiss-cpu = "^1.8.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
